# rapid-timer-decorator

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
rapid_timer_decorator/: __init__.py  core.py
tests/: test_rapid_timer_decorator.py
